fixed home-page background on small devices

--- a/src/app/pages/home-page/home-page.component.scss
+++ b/src/app/pages/home-page/home-page.component.scss
@@ -191,6 +191,10 @@ button[name="sendemail"] {
     border-bottom-left-radius: 0rem;
   }
 
+  .bg-crink {
+    background-position: inherit;
+  }
+
   .features-section {
     border-top-right-radius: 0rem;
   }
